# cmake-testing

./: .gitignore  CMakeLists.txt  main.cpp  test_library.cpp  test_library.h
src/: main.cpp
src/include/: test.h
